# langchain-course

./: .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
code_interpreter/: csv_agent.py  python_agent.py  router_agent.py  tool_calling.py
document_helper/: ingestion.py  main.py  scrape.py
document_helper/backend/: core.py
first-llm/: main.py
ice_breaker/: main.py
ice_breaker/agents/: linkedin_lookup_agent.py
ice_breaker/third_parties/: linkedin.py
pdf_qa/: main.py  utils.py
react_langchain/: main.py
vector_dbs/: ingestion.py  main.py
