[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-ollama>=0.3.2",
    "langchain-tavily>=0.1.5",
    "python-dotenv>=1.1.0",
    "tavily-python>=0.6.0",
]
